<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10sp"
    app:cardBackgroundColor="?colorPrimary"
    app:cardCornerRadius="20sp"
    tools:context=".ui.fragments.NotesFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/text_heading"
            android:layout_gravity="start"
            android:layout_marginStart="@dimen/tendp"
            android:layout_marginTop="@dimen/tendp"
            android:backgroundTint="?colorOnPrimary"
            android:contentDescription="@string/notes_image"
            android:src="@drawable/icons8_left_arrow"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="?colorOnPrimary" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/fivedp"
            android:fadingEdge="vertical"
            android:fadingEdgeLength="@dimen/tendp"
            android:padding="@dimen/twentysp"
            android:scrollbars="none"
            app:layout_constraintTop_toBottomOf="@id/ivBack">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.airbnb.lottie.LottieAnimationView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/twohundreddp"
                    app:lottie_autoPlay="true"
                    app:lottie_loop="true"
                    app:lottie_rawRes="@raw/man_task"
                    app:lottie_scale="0.4" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/fortydp"
                    android:orientation="horizontal"
                    android:weightSum="2"
                    android:baselineAligned="false">

                    <ViewSwitcher
                        android:id="@+id/switcher"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.9">

                        <TextView
                            android:id="@+id/tvHeading"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/heading"
                            android:textColor="?colorOnPrimary"
                            android:textSize="@dimen/thritysp"
                            android:textStyle="bold" />

                        <EditText
                            android:id="@+id/etHeading2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:backgroundTint="?colorOnPrimary"
                            android:hint="@string/heading"
                            android:textColorHint="?colorOnPrimary"
                            android:inputType="text"
                            android:importantForAutofill="yes" />

                    </ViewSwitcher>

                    <ViewSwitcher
                        android:id="@+id/switcheriv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.1">

                        <ImageView
                            android:id="@+id/ivEdit"
                            android:layout_width="@dimen/twentyfivedp"
                            android:layout_height="@dimen/text_heading"
                            android:layout_gravity="center"
                            android:background="@drawable/icons8_edit"
                            android:backgroundTint="?colorOnPrimary"
                            android:hapticFeedbackEnabled="true"
                            android:contentDescription="@string/edit_a_note" />

                        <ImageView
                            android:id="@+id/ivTick2"
                            android:layout_width="@dimen/twentydp"
                            android:layout_height="@dimen/text_heading"
                            android:layout_gravity="center"
                            android:background="@drawable/icons8_checkmark_2"
                            android:backgroundTint="?colorOnPrimary"
                            android:hapticFeedbackEnabled="true" />
                    </ViewSwitcher>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvDate2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/example_date"
                        android:textColor="?colorOnPrimary" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/hash"
                        android:textColor="?colorOnPrimary" />

                    <ViewSwitcher
                        android:id="@+id/switcher1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/idtype"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:text="@string/type"
                            android:textColor="?colorOnPrimary" />

                        <Spinner
                            android:id="@+id/spinnerType2"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_marginVertical="@dimen/tendp"
                            android:backgroundTint="?colorOnPrimary"
                            android:entries="@array/type"
                            android:foregroundTint="?colorOnPrimary"
                            android:hapticFeedbackEnabled="true"
                            android:soundEffectsEnabled="true"
                            android:textColor="?colorOnPrimary"
                            app:tint="?colorOnPrimary" />
                    </ViewSwitcher>
                </LinearLayout>

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/onedp"
                    android:layout_marginVertical="@dimen/fivedp"
                    android:background="?colorOnPrimary" />

                <ViewSwitcher
                    android:id="@+id/switcher2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/tvBody"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/dummytext2"
                        android:textColor="?colorOnPrimary" />

                    <EditText
                        android:id="@+id/etbody"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="?colorOnPrimary"
                        android:hint="@string/enter_your_note"
                        android:importantForAutofill="no"
                        android:inputType="text"
                        android:textColor="?colorOnPrimary"
                        android:textColorHint="?colorOnPrimary" />
                </ViewSwitcher>
            </LinearLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>